<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pakone</string>
    <string name="permission_read_ext_storage_denied" tools:keep="@string/permission_read_ext_storage_denied">Read external storage permission was denied. Please consider granting it in order to upload image!</string>
    <string name="permission_read_ext_storage_never_askagain" tools:keep="@string/permission_read_ext_storage_never_askagain">Read external storage permission was denied with never ask again.</string>
    <string name="permission_read_ext_storage_rationale" tools:keep="@string/permission_read_ext_storage_rationale">Read external storage permission is needed to show the select images.</string>
    <string name="permission_write_ext_storage_denied" tools:keep="@string/permission_write_ext_storage_denied">Write external storage permission was denied. Please consider granting it in order to download files!</string>
    <string name="permission_write_ext_storage_never_askagain" tools:keep="@string/permission_write_ext_storage_never_askagain">Write external storage permission was denied with never ask again.</string>
    <string name="permission_write_ext_storage_rationale" tools:keep="@string/permission_write_ext_storage_rationale">Write external storage permission is needed to show the download files.</string>
    <string name="permission_read_contact_denied" tools:keep="@string/permission_read_contact_denied">Read contacts permission was denied. Please consider granting it in order to send contact information!</string>
    <string name="permission_read_contact_never_askagain" tools:keep="@string/permission_read_contact_never_askagain">Read contacts permission was denied with never ask again.</string>
    <string name="permission_read_contact_rationale" tools:keep="@string/permission_read_contact_rationale">Read contacts permission is needed to send contact information.</string>
    <string name="button_allow" tools:keep="@string/button_allow">Allow</string>
    <string name="button_deny" tools:keep="@string/button_deny">Deny</string>
    <string name="authority">com.dreams.chat.fileprovider</string>
    <string-array name="string_array_resolutions">
        <item>160x120</item>
        // 120P
        <item>320x180</item>
        // 180P
        <item>320x240</item>
        // 240P the default one
        <item>640x360</item>
        // 360P
        <item>640x480</item>
        // 480P
        <item>1280x720</item>
        // 720P
    </string-array>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="file_not_found">File not found!\nFile is either Moved, Deleted or Renamed.</string>
    <string name="media">Media</string>
    <string name="audio">Audio</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here\nStart chatting by selecting a group.</string>
    <string name="empty_text_status_list">Your status appear here\nStart uploading your status here.</string>
    <string name="empty_log_call_list">Your call logs appear here\nStart by selecting a user.</string>
    <string name="no_groups">You have no groups\nCreate a new group to begin with.</string>
    <string name="invitation_text">Hey, I found this ChatApp!, cool chatting application, come join me here.</string>
    <string name="invite_friends">Invite friends…</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="txt_email">Enter email</string>
    <string name="txt_email_password">3 Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_or">( Or )</string>
    <string name="txt_google_plus">Login with Google+</string>
    <string name="label_signin_registration_hint">Enter your mobile number to login or register</string>
    <string name="txt_country">Country</string>
    <string name="txt_phone_number">Your Mobile Number</string>
</resources>