<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_orange_gradient" />

        <ImageView
            android:id="@+id/iv_company_logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_logo"
            android:transitionName="companylogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_company_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/iv_company_logo" />


        <EditText
            android:id="@+id/et_company_email_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="sans-serif"
            android:hint="@string/txt_email_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/et_company_email_id" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/drawable_round_white_button"
            android:text="@string/txt_login"
            android:textAllCaps="false"
            android:textColor="@color/colorPinkRed"
            app:layout_constraintTop_toBottomOf="@+id/et_company_email_password" />


        <TextView
            android:id="@+id/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_or"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/tv_or">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_round_white_button"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_google_plus"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_google_plus"
                android:textAllCaps="false"
                android:textColor="@color/colorPinkRed"
                android:textSize="@dimen/_12sdp" />
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>