<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_detail_inner"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.big.chit.activities.SignInActivity">

    <ImageView
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_weight="0.1"
        android:src="@drawable/ic_logo_" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/layout_registration_hint_TXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/label_signin_registration_hint"
            android:textColor="@color/textColor0"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/layout_signin_country_hint_TXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_registration_hint_TXT"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/txt_country"
            android:textColor="@color/textColor2"
            android:textSize="@dimen/_14sdp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/countryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_signin_country_hint_TXT" />

        <View
            android:id="@+id/countryCodeDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/countryCode"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorAccent" />


        <TextView
            android:id="@+id/layout_signin_mob_number_hint_TXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryCodeDivider"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/txt_phone_number"
            android:textColor="@color/textColor2"
            android:textSize="@dimen/_14sdp" />


        <LinearLayout
            android:id="@+id/layout_phone_number_input_LLY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/layout_signin_mob_number_hint_TXT"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/layout_registration_country_code_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/textColor0"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@null"
                android:hint="Your phone number"
                android:inputType="phone"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/layout_phone_number_input_LLY"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submit"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/message_otp"
            android:textSize="16sp"
            android:visibility="gone" />

        <!--
                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/round_blue"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:text="Confirm"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />
        -->


        <ImageView
            android:id="@+id/submit"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_submit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/textColor1" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:background="@color/textColor3" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
